# My_browarek

./: README.md
.github/ISSUE_TEMPLATE/: default-issue-template.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
backend/: db.sqlite3  manage.py  pyproject.toml  pyrightconfig.json  schema.yml
backend/beers/: apps.py  models.py  serializers.py  views.py
backend/moj_browarek/: admin.py  asgi.py  settings.py  urls.py  views.py  wsgi.py
backend/user/: admin.py  forms.py  models.py  serializers.py  tests.py  views.py
backend/user/migrations/: 0001_initial.py  0002_alter_userprofile_birthdate.py  0003_alter_userprofile_birthdate.py
mobile/: README.md  app.json  metro.config.js  package-lock.json  package.json
mobile/.storybook/: storybook.requires.ts
mobile/MyBrowarek/: App.tsx  app.config.js  app.json  package-lock.json  package.json  tailwind.config.js
mobile/MyBrowarek/.storybook/: index.jsx  main.js  preview.jsx  storybook.requires.js
mobile/MyBrowarek/components/: GettingStarted.stories.jsx
